[gd_scene load_steps=9 format=3 uid="uid://dente7aib2xuk"]

[ext_resource type="StyleBox" uid="uid://cx6fkhog11f3g" path="res://Resources/themes/roundedRect.tres" id="1_bjc6i"]
[ext_resource type="Script" path="res://Scripts/Dialogs/strings_dialog.gd" id="2_wrqo6"]
[ext_resource type="StyleBox" uid="uid://box0many71a4o" path="res://Resources/themes/dialogTitleBackground.tres" id="3_uhffp"]
[ext_resource type="SystemFont" uid="uid://djnjdmtaghwta" path="res://Resources/themes/dialogTitle.tres" id="4_bcs31"]
[ext_resource type="SystemFont" uid="uid://b3xyn2xlnfoht" path="res://Resources/themes/dialogText.tres" id="5_wwei6"]
[ext_resource type="StyleBox" uid="uid://dkq4ayhfvqbvw" path="res://Resources/themes/dialog_text_edit.tres" id="6_rb4ii"]
[ext_resource type="Texture2D" uid="uid://d1fyvq5kerbnb" path="res://Resources/themes/close_gadet.tres" id="6_rnrgw"]
[ext_resource type="StyleBox" uid="uid://0opjcsxbgju8" path="res://Resources/themes/dialog_text_edit_normal.tres" id="7_txp8h"]

[node name="strings_dialog" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(320, 150)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -77.5
offset_right = 160.0
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
mouse_force_pass_scroll_events = false
theme_override_styles/panel = ExtResource("1_bjc6i")
script = ExtResource("2_wrqo6")
metadata/_edit_lock_ = true

[node name="dialogtitleBackground" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -2.0
offset_bottom = 19.0
grow_horizontal = 2
theme_override_styles/panel = ExtResource("3_uhffp")
metadata/_edit_lock_ = true

[node name="dialogTitle" type="Label" parent="dialogtitleBackground"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 4.0
offset_right = -35.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_bcs31")
text = "Strings Editor"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="dialogCloseGadget" type="Button" parent="dialogtitleBackground"]
layout_mode = 0
offset_left = 300.0
offset_top = 1.0
offset_right = 708.0
offset_bottom = 409.0
scale = Vector2(0.035, 0.035)
focus_mode = 0
theme_override_icons/icon = ExtResource("6_rnrgw")
shortcut_feedback = false
shortcut_in_tooltip = false
flat = true
metadata/_edit_lock_ = true

[node name="stringData" type="TextEdit" parent="dialogtitleBackground"]
layout_mode = 0
offset_left = 5.0
offset_top = 25.0
offset_right = 312.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_wwei6")
theme_override_styles/normal = ExtResource("7_txp8h")
theme_override_styles/focus = ExtResource("6_rb4ii")
context_menu_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
metadata/_edit_lock_ = true

[node name="zero_check_box" type="CheckBox" parent="dialogtitleBackground"]
layout_mode = 0
offset_top = 123.0
offset_right = 158.0
offset_bottom = 147.0
theme_override_fonts/font = ExtResource("5_wwei6")
theme_override_font_sizes/font_size = 12
button_pressed = true
text = "Zero Terminated"

[node name="okButton" type="Button" parent="."]
custom_minimum_size = Vector2(80, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 48.5
offset_right = -5.0
offset_bottom = 71.5
grow_horizontal = 0
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_override_fonts/font = ExtResource("5_wwei6")
disabled = true
text = "OK"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="dialogtitleBackground/dialogCloseGadget" to="." method="dialog_cancelled"]
[connection signal="text_changed" from="dialogtitleBackground/stringData" to="." method="_on_string_data_text_changed"]
[connection signal="text_set" from="dialogtitleBackground/stringData" to="." method="_on_string_data_text_changed"]
[connection signal="pressed" from="okButton" to="." method="_on_ok_button_pressed"]
